# xonix

./: .gitignore  CMakeLists.txt  CNAME  index.html  index.manifest.json  index.pck  index.service.worker.js  xonix.wasm
.github/workflows/: android.yml  build.yml  desktop.yml  web.yml
assets/: logo_v0.svg.import
game/: export_presets.cfg  icon.svg.import  project.godot
game/android/: foreground.png.import  main.png.import
game/music/: SidewaysCity.ogg.import  readme.txt
game/scenes/: menu.tscn  perfmon.tscn  settings.tscn
game/themes/: button.tres
game/wasm/: icon144.png.import  icon180.png.import  icon512.png.import
scripts/: build.py  download.py
src/: CMakeLists.txt  main.cpp  util.cpp  util.hpp
src/nodes/: CMakeLists.txt  menu.cpp  menu.hpp  perfmon.cpp  perfmon.hpp  player.cpp  player.hpp  settingswindow.cpp  settingswindow.hpp
